--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </ul>
     </header>
     <main>
-        <img src="img/franco.jpg" alt="Foto de Franco" style="max-height: 400px;">
+        <img src="./img/franco.jpg" alt="Foto de Franco" style="max-height: 400px;">
         <p>Mi nombre es Franco Leonardi. Actualmente me desempeño como Project Manager en una empresa de desarrollo de software.</p>
         <p>Cuento con 5 años de experiencia en desarrollo de software, principalmente en backends .NET.</p>
         <p>Decidí iniciar mis estudios nuevamente en <a href="https://www.uade.edu.ar">UADE</a>, luego de haber estudiado 3 años en UTN. La carrera de Lic. en Gestión de Tecnologías de la Información en modalidad virtual me va a permitir terminar mis estudios de una forma compatible con mi trabajo.</p>
