--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>¡Estoy ansioso de aprender y conocer más sobre el mundo del software y las tecnologías!</p>
     </main>
     <footer>
-        <p>Derechos reservados</p>
+        <p>UADE 2025 - Ejercicio 01 - Franco Leonardi</p>
     </footer>
 </body>
 </html>
